--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,14 @@ ext.codahale_metrics_version='3.0.2'
 ext.javax_inject_version='1'
 ext.findbugs_version='1.3.9'
 
+sourceSets {
+  processors {
+    java {
+      srcDir "src/main/processors"
+    }
+  }
+}
+
 dependencies {
 
     // processor comes from org.inferred.processors
@@ -166,6 +174,12 @@ task testJar(type: Jar, dependsOn: testClasses) {
     from sourceSets.test.output
 }
 
+task processorJar(type: Jar) {
+    classifier = 'processors'
+    from sourceSets.processors
+}
+
+
 configurations {
     tests
       published.extendsFrom tests, archives
@@ -173,9 +187,10 @@ configurations {
 
 artifacts {
 	archives sourcesJar
-    archives jar
-    archives javadocJar
+  archives jar
+  archives javadocJar
 	tests testJar
+  processors processorJar
 }
 
 install {
@@ -193,5 +208,5 @@ eclipse {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
+    gradleVersion = '2.8'
 }
